# mlx-llama-finetune

./: .gitignore  .gitmodules  Modelfile  README.md  lora_config.yaml  mlx-ft.sh  prepare_data.py  pyproject.toml
